modules/actual/components/base/actual-server/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: actual
  annotations:
    cert-manager.io/cluster-issuer: ''
    argocd.argoproj.io/sync-options: Force=true,Replace=true
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: actual
    name: actual
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: actual-gateway-tls
      mode: Terminate
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: actual-cloudflare
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
spec:
  gatewayClassName: cloudflare
  listeners:
  - protocol: HTTP
    port: 80
    name: http
