modules/actual/components/base/actual-server/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
spec:
  hostnames:
  - actual
  parentRefs:
  - name: actual
  - name: actual-cloudflare
  rules:
  - backendRefs:
    - name: actual-server
      port: 80
